--- a/homepage/content/post/krhp-2024.md
+++ b/homepage/content/post/krhp-2024.md
@@ -1,9 +1,9 @@
 ---
 author: "Mass"
-title: "キラハピ2024に参加します"
-draft: true
-image: "img/logo.png"
-date: 2024-06-07
+title: "キラハピ2024に参加しました+おまけ"
+draft: false
+image: "img/ascent_thumb.jpg"
+date: 2024-06-10
 description: "キラハピ2024に参加"
 tags: ["告知"]
 archives: ["2024/06"]
@@ -12,12 +12,22 @@ archives: ["2024/06"]
 お疲れ様です，Mass です．
 キラハピ2024に参加しました．
 
+MVはこちら
+{{< youtube eeeYDXdED0Y >}}
 
 今回，イラストはガンマユウさん(https://x.com/gamma_u1)，
 映像はきゅうりんさん(https://x.com/Kyuurin_mov)にお願いしました．
 
-投稿版の音源は，Ascentのフィジカルをご購入の方はダウンロード頂けます．
+ニコニコ動画が落ちたり，〆切ぎりぎりになったりといろいろありましたが，無事に投稿できたので良しということで．
+
+おまけで，投稿版のAscentの音源を用意しました．
+どのあたりが変わっているでしょう．
+
+[楽曲等の利用規約]({{< ref "/terms.md" >}})
+
+[DL リンク](https://www.dropbox.com/scl/fi/0km4ui6rlaqdv7phg5vm7/Ascent_kirahapi-ver.mp3?rlkey=g9zyfz5dkoypowphsk1tkfozq&st=wev66qym&dl=0)
+
 それではよろしくお願いします！
 
-2024.06.07
+2024.06.10
 Mass
