--- a/homepage/content/post/krhp-2024.md
+++ b/homepage/content/post/krhp-2024.md
@@ -10,17 +10,17 @@ archives: ["2024/06"]
 ---
 
 お疲れ様です，Mass です．
-キラハピ2024に参加しました．
+キラハピ 2024 に参加しました．
 
-MVはこちら
-{{< youtube eeeYDXdED0Y >}}
+MV はこちら
+{{< youtube -sMqT8DlAjY >}}
 
 今回，イラストはガンマユウさん(https://x.com/gamma_u1)，
 映像はきゅうりんさん(https://x.com/Kyuurin_mov)にお願いしました．
 
 ニコニコ動画が落ちたり，〆切ぎりぎりになったりといろいろありましたが，無事に投稿できたので良しということで．
 
-おまけで，投稿版のAscentの音源を用意しました．
+おまけで，投稿版の Ascent の音源を用意しました．
 どのあたりが変わっているでしょう．
 
 [楽曲等の利用規約]({{< ref "/terms.md" >}})
